tests/baselines/reference/parserSkippedTokens10.errors.txt
parserSkippedTokens10.ts(1,1): error TS1127: Invalid character.
parserSkippedTokens10.ts(2,1): error TS1127: Invalid character.


==== parserSkippedTokens10.ts (2 errors) ====
    \
    
!!! error TS1127: Invalid character.
    \
    
!!! error TS1127: Invalid character.
    /*existing trivia*/ ;
    